[project]
name = "tradable-mind"
version = "0.1.0"
description = "AI-powered technical analysis platform for currency trading signals using LangGraph and Google Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai",
    "langchain",
    "langgraph",
    "twelvedata",
    "pandas",
    "python-dotenv",
    "matplotlib",
    "mplfinance",
    "ipykernel>=7.1.0",
    "ta-lib>=0.6.8",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]
